--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <article class="article intro">
             <div class="container">
                 <div class="intro__desc wow animate__animated animate__fadeIn">
-                    <h3 class="intro__title">
+                    <h3 class="subtitle">
                         Nur bis 15 Minuten am Tag für ein Gesichtsmuskeltraining
                     </h3>
                     <p class="intro__desc">- und Sie werden innerhalb eines Monats Falten, Schwellungen und Augenringe
@@ -36,6 +36,47 @@
 
 
         <div class="container">
+            <article class="article about">
+                <div class="about__desc">
+                    <h3 class="subtitle">
+                        Erfahrung und Ergebnisse von Irina
+                    </h3>
+                    <h4 class="about__text">Mein Name ist Irina, 46 j, ich habe mehr als 10 Jahre in Facefitness ~ 1000 Kunden geholfen, Falten, hängende Augenlider, Doppelkinn zu entfernen und das Gesicht zu straffen. Außerdem:
+                    </h4>
+                    <ul class="about__list">
+                        <li>Ich habe eine akademische Ausbildung im Bereich ästhetischer Fitness mit dem Recht, Trainer auszubilden und Zertifikate auszustellen.</li>
+                        <li>Mitglied der International Facefitnhess Association</li>
+                        <li>Ich habe 1,5 Jahre im Biohacking-Zentrum „ReNature you“ in der Schweiz (Beauty und Spa) gearbeitet</li>
+                        <li>Gründerin des Studios für Gesichtsgymnastik „Fitface“ in Basel (Schweiz), wo ich täglich arbeite mit Klientinnen.</li>
+                        <li>Ich gab Interviews im Schweizer Fernsehen über Face Fitness in der Sendung "Basel Regio”</li>
+                        <li>Referentin an dem Internationalen "Frauenfestival" Stuttgart und der Konferenz "Beauty Days Mountain Move" in Gstaad</li>
+                    </ul>
+                </div>
+                <img class="about__pic" src="img/round.png">
+            </article>
+        </div>
+        <article class="article online">
+            <div class="container">
+                <img class="online__pic" src="img/portrait.png">
+                <div class="online__desc">
+                    <h3 class="subtitle">
+                        Online Basis Kurs - Training für Frauen im Alter von 35-55 Jahren, die Folgendes entfernen möchten:
+                    </h3>
+                    <ul class="online__list">
+                        <li>Falten beseitigen (Stirn, Mimikfalten, Krähenfüsse)</li>
+                        <li>Schwellungen und Tränensäcke korrigieren</li>
+                        <li>Um deinem Gesicht ein frisches und harmonisches Aussehen verleihen</li>
+                        <li>Das Gesichtsoval straffen und altersbedingte Deformationen (Hängebacken, Nasolabialfalten, hängende Augenlider) reduzieren</li>
+                    </ul>
+                </div>
+            </div>
+        </article>
+        <div class="container">
+            <article class="article client">
+                <h2 class="title">Ergebnisse meiner Klientinnen</h2>
+                
+            </article>
+        </div>
             <article>
                 <!-- Slider main container -->
                 <div class="swiper-container">
@@ -97,7 +138,6 @@
                     </div>
                 </div>
             </article>
-        </div>
         <article class="article form">
             <div class="container">
                 <div class="form__pic"></div>
