--- a/index.html
+++ b/index.html
@@ -104,46 +104,180 @@
                             <img src="img/elem_8.jpg" alt="">
                         </div>
                     </div>
-                    <!-- If we need pagination -->
-                    <!--     <div class="swiper-pagination"></div> -->
-
-                    <!-- If we need navigation buttons -->
+                    <div class="swiper-pagination"></div>
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-button-next"></div>
                 </div>
             </article>
         </div>
-            <article>
-                <!-- Slider main container -->
+        <article class="article form">
+            <div class="container">
+                <h3 class="form__title">
+                    Probieren Sie 1 Lektionen kostenlos aus und spüren Sie den ersten Effekt!
+                </h3>
+                <p class="form__text">Sie erhalten 1 Lektion per E-Mail</p>
+                <div class="form__wrap">
+                    <form action="">
+                        <input type="text" placeholder="Name">
+                        <input type="text" placeholder="E-mail">
+                        <button class="btn">Probieren</button>
+                    </form>
+                    
+                </div>
+            </div>
+        </article>
+        <div class="container">
+            <article class="article online">
+                <h2 class="title">Wie der Online Basis Kurs verläuft:</h2>
+                <ul class="online__list">
+                    <li>
+                        <span>1</span>
+                        Sie schicken mir Ihre Fotos und ich erstelle einen persönlichen Trainingsplan für Sie.
+                    </li>
+                    <li>
+                        <span>2</span>
+                        14 Lektionen von 6 -15 Minuten plus eine Video „Facebooster“ als Bonus mit Erklärungen, wie die Übungen richtig durchgeführt werden. 
+                    </li>
+                    <li>
+                        <span>3</span>
+                        Am Schluss von jedem Video gibt es Zusammenfassung der Übungen
+                    </li>
+                    <li>
+                        <span>4</span>
+                        3 Wochen Praxis + 1 Woche, um Lieblingsübungen abzuschließen.
+                    </li>
+                    <li>
+                        <span>5</span>
+                        Während des ersten Monats werden wir in Kontakt stehen. Sie können mir Fragen stellen, mir ein Video schicken, um die Korrektheit der Techniken zu überprüfen und die Ergebnisse zu bewerten.
+                    </li>
+                    <li>
+                        <span>6</span>
+                        Wir arbeiten mit allen Gesichtsmuskeln, um langfristige Ergebnisse zu erzielen. Ich habe das Training auf 5-10 Minuten Fitness optimiert, damit Sie ein tolles Ergebnis erzielen und nicht nach 4 Sitzungen aufgeben können.
+                    </li>
+                    <li>
+                        <span>7</span>
+                        Am Ende des Programms erstelle ich eine Collage und zeige Veränderungen im Gesicht, erkläre, wie das Gesicht in Form gehalten werden kann.
+                    </li>
+                </ul>
+            </article>
+        </div>
+        <article class="article get">
+            <div class="container">
+                <div class="get__desc">
+                    <h2 class="title">Was Sie bekommen werden</h2>
+                    <ul class="get__list">
+                        <li>Schwellungen verschwinden und eine schöne Gesichtskontur erscheint</li>
+                        <li>Falten auf der Stirn und um die Augen werden reduziert</li>
+                        <li>Sie werden sich schöner und jünger fühlen</li>
+                    </ul>
+                </div>
+                <img src="img/portrait_2.png" alt="" class="get__pic">
+            </div>
+        </article>
+        <div class="container">
+            <article class="article comment">
                 <div id="sl_1" class="swiper-container">
-                    <!-- Additional required wrapper -->
                     <div class="swiper-wrapper">
-                        <!-- Slides -->
-                        <div class="swiper-slide">
-                            <img src="img/elem_1.jpg" alt="">
+                        <div class="swiper-slide comment__item">
+                            <div class="comment__pic">
+                                <img src="img/user_3.jpg" alt="">
+                            </div>
+                            <div class="comment__text">
+                                Ich mache die Übungen jetzt seit 2 Monaten.
+                                Meine Stirnfalten sind weg, meine Nasolabialfalten sind halb weg. Früher habe ich nicht zufrieden mich im Spiegel angeschaut, aber jetzt bin ich so glücklich. Es ist die Mühe wert.
+                            </div>
+                            <div class="comment__name">Gulnara (51)</div>
                         </div>
-                        <div class="swiper-slide">
-                            <img src="img/elem_2.jpg" alt="">
+                        <div class="swiper-slide comment__item">
+                            <div class="comment__pic">
+                                <img src="img/user_2.jpg" alt="">
+                            </div>
+                            <div class="comment__text">
+                                Veruggt! ich ha nur zwei Wuche lang trainiert.
+                                Mini Nasolabialfalte sind dütlich geschrumpft.
+                                Mi Teint gseht gut us im allgemeine. Me muess an sich schaffe, aber leider isch d' Fuulheit stärgger als ich sälber. Ich bi sälber furchtbar fuul. Aber wenn ich seh, wie cool mi Gsicht wieder zum Läber verwacht, bin i sofort motiviert. Ich dank dir, Irina!
+                            </div>
+                            <div class="comment__name">Gulnara (51)</div>
                         </div>
-                        <div class="swiper-slide">
-                            <img src="img/elem_3.jpg" alt="">
+                        <div class="swiper-slide comment__item">
+                            <div class="comment__pic">
+                                <img src="img/user_4.jpg" alt="">
+                            </div>
+                            <div class="comment__text">
+                                Das Gesicht selbst fühlt sich fest und straff an. Die Schwellungen sind sehr gut zurückgegangen. Meine Problemzone ist viel besser!
+                            </div>
+                            <div class="comment__name">Gulnara (51)</div>
                         </div>
-                        <div class="swiper-slide">
-                            <img src="img/elem_4.jpg" alt="">
+                        <div class="swiper-slide comment__item">
+                            <div class="comment__pic">
+                                <img src="img/user_1.jpg" alt="">
+                            </div>
+                            <div class="comment__text">
+                                Fitface ist die Zukunft, mit diesen Techniken kann man sicher und autonom seine Schönheit erhalten und verbessern. Irina ist eine sehr talentierte Expertin, hervorragende Pädagogin und motiviert mit ihrer Ausstrahlung für ihre Methode Fitface. Ich würde ihre Unterrichte jeder und jedem nur empfehlen. Ich habe bei ihr acht Stunden absolviert und bin von sichtbaren Ergebnissen verblüfft🤩
+                            </div>
+                            <div class="comment__name">Gulnara (51)</div>
                         </div>
-                        <div class="swiper-slide ">
-                            <img src="img/elem_5.jpg" alt="">
+                        <div class="swiper-slide comment__item">
+                            <div class="comment__pic">
+                                sw
+                            </div>
+                            <div class="comment__text">
+                                Es ist unglaublich was man ohne Hilfsmittel,nur mit Gesichtsübungen positives erreichen kann,das Gesicht ist wie geliftet, Termin abmachen lohnt sich
+                            </div>
+                            <div class="comment__name">Susanne Wenger</div>
+                        </div>
+                        <div class="swiper-slide comment__item">
+                            <div class="comment__pic">
+                                rp
+                            </div>
+                            <div class="comment__text">
+                                Irina ist ein absoluter Profi. Sie arbeitet bewußt, individuell und konzentriert. Langjährige Erfahrung hilft ihr nicht nur Alterungsprozess bei Kunden zu bremsen, sondern auch richtige medizinische Probleme zu beheben. Ich bin sehr zufrieden und empfehle sie weiter schon seit Jahren.
+                            </div>
+                            <div class="comment__name">Rada Penn</div>
+                        </div>
+                        <div class="swiper-slide comment__item">
+                            <div class="comment__pic">
+                                i
+                            </div>
+                            <div class="comment__text">
+                                Mit der richtigen Trainingstechnik und regelmäßigen Übungen - minus zehn Jahre ohne Spritzen und chirurgische Eingriffe - sind garantiert! Kompetente Beratung im Zentrum von Basel oder online, Betreuung, Übungsanalyse! Und ein schönes Bonus - Taping, Gesichtsmassagen, Beauty-Fashion. Für Irina ist dies nicht nur ein Gesichts-Fitnessstudio - es ist ein Club mit interessanten und nützlichen Aktivitäten für weibliche Schönheit und Jugend. Ich gehe dort gerne hin.
+                            </div>
+                            <div class="comment__name">Irina (49)</div>
+                        </div>
+                        <div class="swiper-slide comment__item">
+                            <div class="comment__pic">
+                                ms
+                            </div>
+                            <div class="comment__text">
+                                Wärmstens zu empfehlen! Irina ist eine super Lehrerin, die sich auf ihrem Gebiet extrem gut auskennt, anschauliche Erklärungen machen kann, sehr freundlich, authentisch und ehrlich ist. Für mich war ein individueller Kurs bei ihr äusserst lehrreich und nachhaltig. Herzlichen Dank!
+                            </div>
+                            <div class="comment__name">Manon Siebenhaar</div>
+                        </div>
+                        <div class="swiper-slide comment__item">
+                            <div class="comment__pic">
+                                n
+                            </div>
+                            <div class="comment__text">
+                                Irina ist eine erstaunliche Meisterin ihres Fachs! Ich rate jedem, ihren Kurs zu nehmen, er ist großartig! Sie erklärt sehr gut und verständlich.
+                            </div>
+                            <div class="comment__name">Nat</div>
+                        </div>
+                        <div class="swiper-slide comment__item">
+                            <div class="comment__pic">
+                                gp
+                            </div>
+                            <div class="comment__text">
+                                Bin voll begeistert von dieser Frau und natürlich von Ergebnissen, die ich dank Irina erreicht habe. Sehr empfehlenswert!
+                            </div>
+                            <div class="comment__name">Ganna Pikula</div>
                         </div>
                     </div>
-                    <!-- If we need pagination -->
-                    <!--     <div class="swiper-pagination"></div> -->
-
-                    <!-- If we need navigation buttons -->
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-button-next"></div>
                 </div>
             </article>
-            <article class="article faq">
+        </div>
+        <article class="article faq">
                 <h2 class="title title_h2 ac">FAQ</h2>
                 <div class="acc">
                     <button class="accordion">1. Kursprogramm?</button>
@@ -183,20 +317,15 @@
                         </ul>
                     </div>
                 </div>
-            </article>
-        <article class="article form">
-            <div class="container">
-                <div class="form__pic"></div>
-                <div class="form__wrap">
-                    <h2 class="title title_h2">Хотите чтобы мы организовали вашу свадьбу?</h2>
-                    <p>Напишите или позвоните нам!</p>
-                    <form action="">
-                        <input type="text" placeholder="Имя">
-                        <input type="text" placeholder="Номер телефона">
-                        <input type="text" placeholder="E-mail">
-                        <button class="btn">Оставить заявку</button>
-                    </form>
-                    <a href="mailto:info@peonywedd.com" class="form__mail">info@peonywedd.com</a>
+        </article>
+        
+    </main>
+
+
+
+    <footer class="footer">
+        <div class="container container_footer">
+            <a href="mailto:info@peonywedd.com" class="form__mail">info@peonywedd.com</a>
                     <a href="callto:+995505559970" class="form__tel">+995 505 559 970</a>
                     <div class="soclist">
                         <a href="" class="soclist__soc">
@@ -215,15 +344,6 @@
                             </svg>
                         </a>
                     </div>
-                </div>
-            </div>
-        </article>
-    </main>
-
-
-
-    <footer class="footer">
-        <div class="container container_footer">
             <nav class="footer-nav">
                 <a class="footer-nav__link" href="#">Направление</a>
                 <a class="footer-nav__link" href="#">Услуги и цены</a>
