--- a/index.html
+++ b/index.html
@@ -122,7 +122,6 @@
                         <input type="text" placeholder="E-mail">
                         <button class="btn">Probieren</button>
                     </form>
-                    
                 </div>
             </div>
         </article>
@@ -176,6 +175,7 @@
         </article>
         <div class="container">
             <article class="article comment">
+                <h2 class="title">Bewertungen</h2>
                 <div id="sl_1" class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide comment__item">
@@ -276,9 +276,44 @@
                     <div class="swiper-button-next"></div>
                 </div>
             </article>
+            <article class="article tarif">
+                <h2 class="title">Tarife</h2>
+                <div class="tarif__wrap">
+                    <div class="tarif__el">
+                        <div class="tarif__info">
+                            <div class="tarif__name">Ohne Feedback</div>
+                            <div class="tarif__desc">Sie erhalten täglich Video-Lektionen und führen sie aus</div>
+                        </div>
+                        <div class="tarif__cost">55 EUR</div>
+                    </div>
+                    <div class="tarif__el">
+                        <div class="tarif__info">
+                            <div class="tarif__name">Mit Feedback</div>
+                            <div class="tarif__desc">Irina sieht persönlich, wie Sie die Übungen ausführen, korrigiert Sie und die Wahrscheinlichkeit, ein doppelt so sichtbares Ergebnis zu erzielen, ist höher</div>
+                        </div>
+                        <div class="tarif__cost">250 EUR</div>
+                        <div class="tarif__label">Nur 10 Personen!</div>
+                    </div>
+                </div>
+            </article>
         </div>
-        <article class="article faq">
-                <h2 class="title title_h2 ac">FAQ</h2>
+        <article class="article form">
+            <div class="container">
+                <h3 class="form__title">
+                    Probieren Sie 1-Tag-Training kostenlos aus!
+                </h3>
+                <div class="form__wrap">
+                    <form action="">
+                        <input type="text" placeholder="Name">
+                        <input type="text" placeholder="E-mail">
+                        <button class="btn">Probieren</button>
+                    </form>
+                </div>
+            </div>
+        </article>
+        <div class="container">
+            <article class="article faq">
+                <h2 class="title">FAQ</h2>
                 <div class="acc">
                     <button class="accordion">1. Kursprogramm?</button>
                     <div class="panel">
@@ -317,70 +352,31 @@
                         </ul>
                     </div>
                 </div>
+            </article>
+        </div>
+        <article class="article contact">
+            <div class="container">
+                <h2 class="title">Kontaktinformationen</h2>
+                <a href="callto:+41767332226" class="contact__tel">+41 76 733 22 26</a>
+                <a href="mailto:irina@fitface.ch" class="contact__mail">irina@fitface.ch</a>
+                <div class="soclist">
+                    <a href="" class="soclist__soc">
+                        <img src="img/in.svg" alt="">
+                    </a>
+                    <a href="" class="soclist__soc">
+                        <img src="img/yo.svg" alt="">
+                    </a>
+                    <a href="" class="soclist__soc">
+                        <img src="img/te.svg" alt="">
+                    </a>
+                    <a href="" class="soclist__soc">
+                        <img src="img/wa.svg" alt="">
+                    </a>
+                </div>
+            </div>
         </article>
-        
     </main>
 
-
-
-    <footer class="footer">
-        <div class="container container_footer">
-            <a href="mailto:info@peonywedd.com" class="form__mail">info@peonywedd.com</a>
-                    <a href="callto:+995505559970" class="form__tel">+995 505 559 970</a>
-                    <div class="soclist">
-                        <a href="" class="soclist__soc">
-                            <svg class="soclist__socpic">
-                                <use xlink:href="img/sprite.svg#icon-te"></use>
-                            </svg>
-                        </a>
-                        <a href="" class="soclist__soc">
-                            <svg class="soclist__socpic">
-                                <use xlink:href="img/sprite.svg#icon-wa"></use>
-                            </svg>
-                        </a>
-                        <a href="" class="soclist__soc">
-                            <svg class="soclist__socpic">
-                                <use xlink:href="img/sprite.svg#icon-vi"></use>
-                            </svg>
-                        </a>
-                    </div>
-            <nav class="footer-nav">
-                <a class="footer-nav__link" href="#">Направление</a>
-                <a class="footer-nav__link" href="#">Услуги и цены</a>
-                <a class="footer-nav__link" href="#about">Портфолио</a>
-            </nav>
-            <a href="" class="footer-logo"></a>
-            <nav class="footer-nav footer-nav_right">
-                <a class="footer-nav__link" href="#">Полезная информация</a>
-                <a class="footer-nav__link" href="#">FAQ</a>
-                <a class="footer-nav__link" href="#about">Контакты</a>
-            </nav>
-
-        </div>
-        <div class="container">
-            <div class="soclist">
-                <a href="" class="soclist__soc">
-                    <svg class="soclist__socpic">
-                        <use xlink:href="img/sprite.svg#icon-te"></use>
-                    </svg>
-                </a>
-                <a href="" class="soclist__soc">
-                    <svg class="soclist__socpic">
-                        <use xlink:href="img/sprite.svg#icon-wa"></use>
-                    </svg>
-                </a>
-                <a href="" class="soclist__soc">
-                    <svg class="soclist__socpic">
-                        <use xlink:href="img/sprite.svg#icon-vi"></use>
-                    </svg>
-                </a>
-            </div>
-            <div class="footer__copy">
-                © 2023 Peony.<div class="footer__copylink">&nbsp;Разработали <a href="https://web-off.ru"
-                        target="_blank">web-off.ru</a></div>
-            </div>
-        </div>
-    </footer>
 
 
     <script src="js/jquery-3.6.0.min.js"></script>
