--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h3 class="subtitle">
                         Nur bis 15 Minuten am Tag für ein Gesichtsmuskeltraining
                     </h3>
-                    <p class="intro__desc">- und Sie werden innerhalb eines Monats Falten, Schwellungen und Augenringe
+                    <p>- und Sie werden innerhalb eines Monats Falten, Schwellungen und Augenringe
                         deutlich reduzieren! Der erste Effekt ist bereits am 4. Tag sichtbar!</p>
                     <a href="" class="btn">Probieren Sie 1 Lektionen kostenlos aus!</a>
                 </div>
