--- a/index.html
+++ b/index.html
@@ -77,38 +77,45 @@
         <div class="container">
             <article class="article client">
                 <h2 class="title">Ergebnisse meiner Klientinnen</h2>
-                <div id="sl_2" class="swiper-container">
-                    <!-- Additional required wrapper -->
-                    <div class="swiper-wrapper">
-                        <!-- Slides -->
-                        <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_1@2x.jpg">
-                            <img src="img/elem_1.jpg" alt="">
+                <div class="client__wrap">
+                    <div id="sl_2" class="swiper-container">
+                        <!-- Additional required wrapper -->
+                        <div class="swiper-wrapper">
+                            <!-- Slides -->
+                            <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_1@2x.jpg">
+                                <img src="img/elem_1.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_2@2x.jpg">
+                                <img src="img/elem_2.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_3@2x.jpg">
+                                <img src="img/elem_3.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_4@2x.jpg">
+                                <img src="img/elem_4.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_5@2x.jpg">
+                                <img src="img/elem_5.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_6@2x.jpg">
+                                <img src="img/elem_6.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_7@2x.jpg">
+                                <img src="img/elem_7.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_8@2x.jpg">
+                                <img src="img/elem_8.jpg" alt="">
+                            </div>
                         </div>
-                        <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_2@2x.jpg">
-                            <img src="img/elem_2.jpg" alt="">
-                        </div>
-                        <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_3@2x.jpg">
-                            <img src="img/elem_3.jpg" alt="">
-                        </div>
-                        <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_4@2x.jpg">
-                            <img src="img/elem_4.jpg" alt="">
-                        </div>
-                        <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_5@2x.jpg">
-                            <img src="img/elem_5.jpg" alt="">
-                        </div>
-                        <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_6@2x.jpg">
-                            <img src="img/elem_6.jpg" alt="">
-                        </div>
-                        <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_7@2x.jpg">
-                            <img src="img/elem_7.jpg" alt="">
-                        </div>
-                        <div class="swiper-slide" data-fancybox="gallery" data-src="img/elem_8@2x.jpg">
-                            <img src="img/elem_8.jpg" alt="">
-                        </div>
+                        <div class="swiper-pagination"></div>
+                        
                     </div>
-                    <div class="swiper-pagination"></div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button swiper-button-prev">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" tabindex="-1"><path d="M9 3l9 9-9 9"></path></svg>
+                    </div>
+                    <div class="swiper-button swiper-button-next">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" tabindex="-1"><path d="M9 3l9 9-9 9"></path></svg>
+                    </div>
                 </div>
             </article>
         </div>
