--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
             </div>
         </article>
         <div class="container">
-            <article class="article online">
-                <h2 class="title">Wie der Online Basis Kurs verläuft:</h2>
-                <ul class="online__list">
+            <article class="article how">
+                <h2 class="title">Wie der Online Basis<br>Kurs verläuft:</h2>
+                <ul class="how__list">
                     <li>
                         <span>1</span>
                         Sie schicken mir Ihre Fotos und ich erstelle einen persönlichen Trainingsplan für Sie.
