--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                 Ich mache die Übungen jetzt seit 2 Monaten.
                                 Meine Stirnfalten sind weg, meine Nasolabialfalten sind halb weg. Früher habe ich nicht zufrieden mich im Spiegel angeschaut, aber jetzt bin ich so glücklich. Es ist die Mühe wert.
                             </div>
-                            <div class="comment__name">Gulnara (51)</div>
+                            <div class="comment__name">AI R (52)</div>
                         </div>
                         <div class="swiper-slide comment__item">
                             <div class="comment__pic">
@@ -206,7 +206,7 @@
                                 Mini Nasolabialfalte sind dütlich geschrumpft.
                                 Mi Teint gseht gut us im allgemeine. Me muess an sich schaffe, aber leider isch d' Fuulheit stärgger als ich sälber. Ich bi sälber furchtbar fuul. Aber wenn ich seh, wie cool mi Gsicht wieder zum Läber verwacht, bin i sofort motiviert. Ich dank dir, Irina!
                             </div>
-                            <div class="comment__name">Gulnara (51)</div>
+                            <div class="comment__name"></div>
                         </div>
                         <div class="swiper-slide comment__item">
                             <div class="comment__pic">
@@ -215,7 +215,7 @@
                             <div class="comment__text">
                                 Das Gesicht selbst fühlt sich fest und straff an. Die Schwellungen sind sehr gut zurückgegangen. Meine Problemzone ist viel besser!
                             </div>
-                            <div class="comment__name">Gulnara (51)</div>
+                            <div class="comment__name"></div>
                         </div>
                         <div class="swiper-slide comment__item">
                             <div class="comment__pic">
