--- a/index.html
+++ b/index.html
@@ -311,20 +311,20 @@
                 <h3 class="form__title">
                     Probieren Sie 1-Tag-Training kostenlos aus!
                 </h3>
-                <div class="form__wrap">
-                    <form action="">
+                <form action="">
+                    <div class="form__wrap">
                         <input type="text" placeholder="Name">
                         <input type="text" placeholder="E-mail">
                         <button class="btn">Probieren</button>
-                    </form>
-                </div>
+                    </div>
+                </form>
             </div>
         </article>
         <div class="container">
             <article class="article faq">
                 <h2 class="title">FAQ</h2>
                 <div class="acc">
-                    <button class="accordion">1. Kursprogramm?</button>
+                    <button class="accordion">1. Kursprogramm?<span></span></button>
                     <div class="panel">
                         <ol>
                             <li>Gute Haltung</li>
@@ -344,11 +344,11 @@
                             <li>Bonus „Facebooster“</li>
                         </ol>
                     </div>
-                    <button class="accordion">2. Wann macht sich die Wirkung bemerkbar?</button>
+                    <button class="accordion">2. Wann macht sich die Wirkung bemerkbar?<span></span></button>
                     <div class="panel">
                         <p>Die ersten Ergebnisse sehen Sie nach der ersten Woche und signifikante Veränderungen nach Abschluss des 25 Kurstages.</p>
                     </div>
-                    <button class="accordion">3. Gibt es Kontraindikationen?</button>
+                    <button class="accordion">3. Gibt es Kontraindikationen?<span></span></button>
                     <div class="panel">
                         <ul>
                             <li>Jegliche Entzündungen und Erkältungen</li>
